--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     <link rel="stylesheet" href="index.css"
 </head>
 <body>
-    <div id="timers">
-        <div id="drone-timer" class="old">00:00:000</div>
-        <div id="missile-timer" class="old">00:00:000</div>
+    <div id="timers" class="old">
+        <div id="drone-timer" >00:00:000</div>
+        <div id="missile-timer">00:00:000</div>
     </div>
     <div id="positions">
-        <div id="drone-x">0</div>
-        <div id="drone-y">0</div>
-        <div id="missile-x">0</div>
-        <div id="missile-y">0</div>
+        <div id="drone-x">00.00</div>
+        <div id="drone-y">00.00</div>
+        <div id="missile-x">00.00</div>
+        <div id="missile-y">00.00</div>
     </div>
     <div id="hit-x"></div>
     <div id="hit-y"></div>
-    <div id="angle" class="old">&theta;:</div>
+    <div id="angle" class="old"></div>
     <button id="start">START</button>
     <button id="launch">LAUNCH</button>
     <div id="drone-container">
