--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="hit-x"></div>
     <div id="hit-y"></div>
     <div id="angle" class="old"></div>
+    <img id="key" src="images/key1.png">
     <button id="start">START</button>
     <button id="launch">LAUNCH</button>
     <div id="drone-container">
