--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
     <div id="timers" class="old">
         <div id="drone-timer" >00:00:000</div>
         <div id="missile-timer">00:00:000</div>
+        <div id="eta">ETA:</div>
     </div>
     <div id="positions">
+        <div class="engrave"></div>
+        <div class="engrave top">X</div>
+        <div class="engrave top">Y</div>
+        <div class="engrave">DRONE:</div>
         <div id="drone-x">00.00</div>
         <div id="drone-y">00.00</div>
+        <div class="engrave">MISSILE:</div>
         <div id="missile-x">00.00</div>
         <div id="missile-y">00.00</div>
+        <div class="engrave">HIT:</div>
+        <div id="hit-x"></div>
+        <div id="hit-y"></div>
     </div>
-    <div id="hit-x"></div>
-    <div id="hit-y"></div>
     <div id="angle" class="old"></div>
     <img id="key" src="images/key1.png">
     <button id="start">START</button>
